fixed spacing on login buttons

--- a/app/assets/stylesheets/components/_custom_button.scss
+++ b/app/assets/stylesheets/components/_custom_button.scss
@@ -196,3 +196,7 @@
 .fileinput-button {
   cursor: pointer;
 }
+
+.login-btn {
+  margin-right: 16px;
+}
